--- a/style.css
+++ b/style.css
@@ -33,11 +33,12 @@ img {
   background-color: rgba(255, 255, 255, 0.1);
   display: flex;
   /* align-items: center; */
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  row-gap: 50px;
   flex-direction: column;
   border-radius: 7px;
-  height: 60%;
-  padding: 0 17px;
+  /* height: 60%; */
+  padding: 17px 17px;
 }
 h2{
     margin: 0;
