--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Open Sans", "Helvetica Neue", sans-serif;
-  
+
   background: linear-gradient(90deg, #0700b8 0%, #00ff88 100%);
   background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
 }
@@ -16,15 +16,14 @@ body {
   background-color: black;
 }
 img {
-  width: 200px;
-  height: 200px;
+  width: 10vw;
+  height: 10vw;
   border-radius: 7px;
 }
 #img {
   display: inline-block;
   height: auto;
   align-self: center;
-
 }
 .card {
   /* width: 110px; */
@@ -34,13 +33,13 @@ img {
   display: flex;
   /* align-items: center; */
   /* justify-content: space-around; */
-  row-gap: 50px;
+  row-gap: 2vw;
   flex-direction: column;
   border-radius: 7px;
   /* height: 60%; */
   padding: 17px 17px;
 }
-h2{
-    margin: 0;
-    padding: 0;
+h2 {
+  margin: 0;
+  padding: 0;
 }
