--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ img {
   width: 300px;
   height: 300px;
   border-radius: 7px;
+  transition: all ease-in-out;
 }
 #img {
   display: inline-block;
@@ -42,4 +43,20 @@ img {
 h2 {
   margin: 0;
   padding: 0;
+}
+
+button.btn {
+  outline: none;
+  border-radius: 8px;
+  padding: 12px 10px;
+  background-color: #4caf50;
+  border: none;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: larger;
+  cursor: pointer;
+}
+button.btn:is( :active) {
+  filter: grayscale(0.3);
+  opacity: 0.3;
 }
